<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="40dp">
    <TextView
        android:id="@+id/tvTitleCreateAnApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_choice_a_template"
        android:padding="8dp"
        style="@style/App.Title"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:maxLines="2"
        android:id="@+id/tvParagraphCreateAnApp"
        android:layout_marginTop="12dp"
        style="@style/App.paragraph"
        android:text="@string/subtitle_choiceatemplate"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleCreateAnApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spCateogry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvParagraphCreateAnApp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCateogry" />

</androidx.constraintlayout.widget.ConstraintLayout>