<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/tvTitleCreateAnApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_choice_a_template"
        android:padding="8dp"
        style="@style/App.Title"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:maxLines="2"
        android:id="@+id/tvParagraphCreateAnApp"
        android:layout_marginTop="12dp"
        style="@style/App.paragraph"
        android:text="@string/subtitle_choiceatemplate"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleCreateAnApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSubcategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        android:orientation="vertical"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvParagraphCreateAnApp"
        tools:listitem="@layout/item_subcategorylist" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvSubcategory"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>